--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   riverpod_annotation: ^2.6.1
   video_player: ^2.9.2
   chewie: ^1.8.7
+  flutter_icon_shadow: ^2.0.7
+  flutter_tts: ^4.2.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
